<resources>
    <string name="app_name">MHL App</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tablaGlucosa">Valores de referencia en mg/dl según edad y momento de medición.</string>
    <string name="elementDIA">
        Diagnóstico #1 - 09-06-2025
    </string>
    <string name="no_tienes">¿No tienes cuenta?</string>
    <string name="registrate_aqui">Regístrate aquí</string>
    <string name="registrate">Regístrate</string>
    <string name="bienvenido">Iniciar Sesión</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="siguiente">Siguiente</string>
    <string name="acepto_los">Acepto los </string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="genero">Género</string>
    <string name="telefono">Teléfono</string>
    <string name="correo_e">Correo Electrónico</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="curp">CURP</string>
    <string name="login_completa_campos">Completa todos los campos</string>
    <string name="login_login_exitoso">Login exitoso</string>
    <string name="login_credenciales_inc">Credenciales incorrectas</string>
    <string name="login_error_conexion">Error de conexión</string>
    <string name="login_usuario_registrado">Usuario registrado correctamente</string>
    <string name="login_error_registro">Error en el registro</string>
    <string name="home_titulo">PANEL DE SALUD</string>
    <string name="ultima_actualizacion">Última actualización: --</string>
    <string name="ultima_actualizacion_sin_texto">Última actualización</string>
    <string name="actualizar">Actualizar</string>
    <string name="presion_arterial">Presión Arterial</string>
    <string name="presion_arterial_sistolica">Presión Arterial Sistólica</string>
    <string name="presion_arterial_diastolica">Presión Arterial Diastólica</string>
    <string name="frecuencia_cardiaca_sobre_pulso">Frecuencia Cardíaca / Pulso</string>
    <string name="frecuencia_cardiaca">Frecuencia Cardíaca</string>
    <string name="frecuencia_respiratoria">Frecuencia Respiratoria</string>
    <string name="temperatura_corporal">Temperatura Corporal</string>
    <string name="saturacion_oxigeno">Oxígeno</string>
    <string name="hrv" translatable="false">HRV</string>
    <string name="cvrr" translatable="false">CVRR</string>
    <string name="home_por_favor_espera">Por favor espera un minuto</string>
    <string name="home_por_favor_conecte">Por favor, conecte el dispositivo</string>
    <string name="home_actualizando">Actualizando...</string>
    <string name="home_actualizado">Actualizado</string>
    <string name="msg_sincronizando">Sincronizando...</string>
    <string name="historial">HISTORIAL</string>
    <string name="mostrar_historial">Mostrar historial</string>
    <string name="ocultar_historial">Ocultar historial</string>
    <string name="no_hay_datos">No hay datos disponibles</string>
    <string name="ultimos">Últimos\u0020</string>
    <string name="registros_de">\u0020registros de\u0020</string>
    <string name="diagnosticos_grupos">Diagnósticos por Grupos</string>
    <string name="generar_diagnostico">Generar Diagnóstico</string>
    <string name="historial_diagnosticos">Historial de Diagnósticos</string>
    <string name="health_diagnostico_no_diponible">Diagnóstico no disponible. Por favor espera al siguiente monitoreo</string>
    <string name="health_no_tienes_app_pdf">No tienes ninguna app para abrir PDFs</string>
    <string name="cuidado_health">Cuidado</string>
    <string name="bienestar_diario">Tu bienestar diario</string>
    <string name="estado_salud">Estado de salud</string>
    <string name="actualizado">Actualizado hace 5 min</string>
    <string name="bueno">Bueno</string>
    <string name="tendencia">Tendencia</string>
    <string name="positiva">Positiva</string>
    <string name="mejorando_semana">Mejorando esta semana</string>
    <string name="chequeos">Chequeos</string>
    <string name="completados_esta_semana">completados esta semana</string>
    <string name="consejos_dia">Consejos del día</string>
    <string name="mantente_hidratado">Mantente hidratado</string>
    <string name="recuerda_beber">Recuerda beber al menos 8 vasos de agua al día para mantener tu cuerpo funcionando correctamente.</string>
    <string name="ejercicio_regular">Ejercicio regular</string>
    <string name="minutos_actividad">30 minutos de actividad moderada al día pueden mejorar significativamente tu salud cardiovascular.</string>
    <string name="alertas_recientes">Alertas recientes</string>
    <string name="tu_presion_arterial">Tu presión arterial ha sido estable esta semana</string>
    <string name="hace_horas">Hace 2h</string>
    <string name="recuerda_medir">Recuerda medir tu glucosa después del almuerzo</string>
    <string name="modificar_monitoreo">Modificar Monitoreo</string>
    <string name="modificar_peso_altura">Modificar Peso y Altura</string>
    <string name="conectar_dispositivo">Conectar Dispositivo</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="edad">32 años</string>
    <string name="status">Premium</string>
    <string name="conexion">Reloj conectado</string>
    <string name="dias">Días activos</string>
    <string name="mediciones">Mediciones</string>
    <string name="logros">Logros</string>
    <string name="mi_dispositivo">Mi dispositivo</string>
    <string name="configurar_reloj">Configurar reloj</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="historial_registros">Historial</string>
    <string name="ver_registros">Ver registros</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="recordatorios">Alertas y recordatorios</string>
    <string name="privacidad">Privacidad</string>
    <string name="permisos">Permisos y datos</string>
    <string name="ayuda">Ayuda</string>
    <string name="soporte">Centro de soporte</string>
    <string name="intervalo_monitoreo">Minutos del intervalo del monitoreo</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="quest_por_favor_ingresa_edad">Por favor ingresa una edad válida</string>
    <string name="quest_por_favor_ingresa_peso">Por favor ingresa un peso válido</string>
    <string name="quest_por_favor_ingresa_numero">Ingresa un número válido</string>
    <string name="quest_por_favor_ingresa_tu_altura">Por favor ingresa tu altura</string>
    <string name="quest_por_favor_ingresa_tu_peso">Por favor ingresa tu peso</string>
    <string name="buscar_dispositvos">Buscar Dispositivos</string>
    <string name="dispositivos_disponibles">Lista de Dispositivos </string>
    <string name="desconectar_dispositivo">Desconectar</string>
    <string name="dispositivo_conectado">Dispositivo conectado</string>
    <string name="dispositivo_desconectado">Dispositivo desconectado</string>
    <string name="tiempo_conexion_agotado">Tiempo de conexión agotado</string>
    <string name="conectando">Conectando...</string>
    <string name="selecciona_tu_idioma">Selecciona tu idioma</string>
    <string name="selecciona_tu_pais">Selecciona tu país</string>
    <string name="pasos">pasos</string>
    <string name="metaPasos">Meta de Pasos</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="mi_equipo">Mi Equipo</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="altura">Altura</string>
    <string name="unidadAltura">cm</string>
    <string name="peso">Peso</string>
    <string name="unidadPeso">kg</string>
    <string name="consumo_datos">Uso de Datos</string>
    <string name="servicio_de_monitoreo">SERVICIO DE MONITOREO:</string>
    <string name="inactivo">ACTIVO</string>
    <string name="deporte">Deporte</string>
    <string name="cuidado">Cuidado</string>
    <string name="email">Correo electrónico</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
</resources>