<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/house"
        android:title="@string/inicio" />
    <item
        android:id="@+id/sportFragment"
        android:icon="@drawable/dumbbell"
        android:title="@string/deporte" />
<!--    <item
        android:id="@+id/nav_sports"
        android:icon="@drawable/futbol_o"/>-->
    <item
        android:id="@+id/healthFragment"
        android:icon="@drawable/heart_2"
        android:title="@string/cuidado"/>
    <!--<item
        android:id="@+id/nav_devices"
        android:icon="@drawable/watch" />-->
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_round"
        android:title="@string/perfil"/>
</menu>