<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:titleTextColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/selecciona_tu_pais"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/contrasena"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/nombre">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etNombre"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/apellido_paterno">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etApellidoPaterno"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/apellido_materno">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etApellidoMaterno"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Género -->
            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/genero"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFemenino"
                    android:text="@string/femenino"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:text="@string/masculino"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/telefono">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etTelefono"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/curp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etCurp"
                    android:inputType="textCapCharacters"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/fecha_nacimiento">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/etFechaNacimiento"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_marginTop="24dp"
                android:text="@string/registrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>