<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/closeDialog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/cross"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion_personal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"
                android:layout_marginBottom="24dp" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura" />
            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/unidadAltura"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="16dp"
                android:maxLength="3"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso" />
            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/unidadPeso"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:paddingHorizontal="12dp"
                android:layout_marginBottom="16dp"
                android:maxLength="3"/>
            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/aceptar"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button_blue"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
