<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/cup"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metaPasos"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"
                android:layout_marginBottom="24dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/inputSteps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/pasos"
            android:inputType="number"
            android:background="@drawable/input_background"
            android:paddingHorizontal="12dp"
            android:layout_marginBottom="16dp"
            android:maxLength="5"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/aceptar"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button_blue"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
